app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corporate-america-mysql
  namespace: pudding-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corporate-america-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: corporate-america-mysql
    spec:
      containers:
      - name: corporate-america-mysql
        image: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: corporate-america-mysql
      volumes:
      - name: corporate-america-mysql
        persistentVolumeClaim:
          claimName: corporate-america-mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corporate-america
  namespace: pudding-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corporate-america
  template:
    metadata:
      labels:
        app: corporate-america
    spec:
      containers:
      - name: corporate-america
        image: registry.integranet.ph/pudding/corporate-america:latest
        ports:
        - containerPort: 2930
          name: http
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: corporate-america
  namespace: pudding-staging
spec:
  ports:
    - name: http
      port: 80
      targetPort: 2930
  selector:
    app: corporate-america
---
apiVersion: v1
kind: Service
metadata:
  name: corporate-america-mysql
  namespace: pudding-staging
spec:
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector:
    app: corporate-america-mysql
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corporate-america
  namespace: pudding-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - app.digitalalibi.ai
    secretName: corporate-america
  rules:
    - host: app.digitalalibi.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: corporate-america
                port:
                  number: 80
  ingressClassName: nginx
